--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            <p id="moreabout">If you have time, you should read more about this myth in this <a href="https://en.wikipedia.org/wiki/Medusa" target="_blank" id="tribute-link">Wikipedia entry.</a></p>
 
            
-           <footer>by Milena Dias</footer>
+           <footer>Designed and coded by Milena Dias</footer>
         </section>    
     </div>
      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
